--- a/Funciones Constructoras y Clases/FCSegundoKely.html
+++ b/Funciones Constructoras y Clases/FCSegundoKely.html
@@ -23,37 +23,35 @@
         }
 
         //añadir una mascota
-        Usuario.prototype.addMascota = function () {
-            this.mascotas.push('Boxer');
+        Usuario.prototype.addMascota = function (mascota) { 
+            this.mascotas.push(mascota);
         }
-
         //obtener la cantidad de mascotas
         Usuario.prototype.getMascotas = function () {
             return this.mascotas.length;
         }
 
         //añadir un libro
-        Usuario.prototype.addBook = function () { 
+        Usuario.prototype.addBook = function (nombres, autor) {
             this.libros.push({ 
-                nombre:'book', 
-                autor:'autor'
+                nombres: nombres, 
+                autor: autor
             });
         }
-
         //obtener autores de libros
         Usuario.prototype.getBook = function () {
-            let autores = "";
+            let autores = [];
             for (i=0; i<this.libros.length; i++)
             {
-                autores += this.libros[i].nombre + ", ";
+                autores [i] = this.libros[i].nombres;
             }
             return autores;
         }
-        let ana = new Usuario('Kely', 'Segundo',[{nombre:'La Odisea', autor:'Homero'}, {nombre:'Hamlet', autor:'William'}], ['Pug']);
+        let ana = new Usuario('Kely', 'Segundo',[{nombres:'Hamlet', autor:'William'}], ['Pug','Doki']);
         console.log(ana.getFullName());
-        ana.addMascota();
+        ana.addMascota('Boxer');
         console.log(ana.getMascotas());
-        ana.addBook();
+        ana.addBook('La Odisea', 'Homero');
         console.log(ana.getBook());
     </script>
 </body>
